--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,4 +32,4 @@ jobs:
       if: always()
       with:
         files: |
-          test-results/**/*.trx
+          Tests/TestResults/test-results.trx
