--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,3 +34,4 @@ jobs:
         name: Test Results
         path: Tests/TestResults/test-results.trx
         reporter: dotnet-trx
+        only-summary: 'false'
