--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,11 +26,9 @@ jobs:
     - name: Build
       run: dotnet build --no-restore
     - name: Test
-      run: dotnet test --no-build --logger "xunit;LogFilePath=test_result.xml;verbosity=detailed"
-    - name: Publish Test Results
-      uses: EnricoMi/publish-unit-test-result-action@v2
+      run: dotnet test --no-build --logger "junit;LogFilePath=test_result.xml"
+    - name: Publish Test Report
+      uses: mikepenz/action-junit-report@v4
       if: always()
       with:
-        files: |
-          Tests/test_result.xml
-        report_suite_logs: "info"
+        report_paths: 'Tests/test_result.xml'
