--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JunitXml.TestLogger" Version="3.0.134" />
     <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.22" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
