--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,3 +32,5 @@ jobs:
       if: always()
       with:
         report_paths: 'Tests/test_result.xml'
+        summary: true
+        detailed_summary: true
