--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,12 +25,10 @@ jobs:
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --logger "junit;LogFilePath=test_result.xml"
-    - name: Publish Test Report
-      uses: mikepenz/action-junit-report@v4
-      if: always()
+    - name: Test and Report
+      uses: zyborg/dotnet-tests-report@v1
       with:
-        report_paths: 'Tests/test_result.xml'
-        summary: true
-        detailed_summary: true
+        project_path: Tests
+        report_name: my_project_tests
+        report_title: My Project Tests
+        github_token: ${{ secrets.GITHUB_TOKEN }}
