--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --logger "trx;LogFileName=test-results.trx"
     - name: Parse Trx files
-      uses: NasAmin/trx-parser
+      uses: NasAmin/trx-parser@latest
       id: trx-parser
       with:
         TRX_PATH: ${{ github.workspace }}/Tests/TestResults #This should be the path to your TRX files
