--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,6 +28,7 @@ jobs:
     - name: Test
       run: dotnet test --no-build --logger "trx;LogFileName=test-results.trx"
     - name: Parse Trx files
+      if: always()
       uses: NasAmin/trx-parser@v0.5.0
       id: trx-parser
       with:
