--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MartinCostello.Logging.XUnit" Version="0.3.0" />
+    <PackageReference Include="Meziantou.Extensions.Logging.Xunit" Version="1.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.22" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.2" />
     <PackageReference Include="Serilog.Sinks.XUnit" Version="3.0.5" />
