--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,7 @@ jobs:
           Tests/test_result.xml
         report_suite_logs: "info"
     - uses: actions/upload-artifact@v3
+      if: always()
       with:
         name: my-artifact
         path: Tests/test_result.xml
